archive/apps/atlantis/atlantis/app/ingress.yaml
---
# ingress in chart seems broken, maybe check back later
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlantis-webhook
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/cloudflare: "true"
    hajimari.io/enable: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: &host atlantis-webhook.techtales.io
      http:
        paths:
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: atlantis
                port:
                  number: 80
  tls:
    - secretName: atlantis-webhook-tls
      hosts:
        - *host
